<resources>
    <string name="app_name">light_prototype</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="join">Join</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_title">PAINseau</string>
    <string name="login_username">Username</string>
    <string name="chat_enter_message">Enter your message</string>
    <string name="chat_send_message">Send</string>
    <string name="chat_other_msg_username">username</string>
    <string name="chat_other_msg_message">message</string>
    <string name="chat_other_msg_time">timestamp</string>
    <string name="chat_other_msg_logo_descr">Avatar</string>
    <string name="chat_own_msg_username">username</string>
    <string name="chat_own_msg_message">message</string>
    <string name="chat_own_msg_time">timestamp</string>
    <string name="chat_user_update_message">update</string>
    <string name="chat_own_msg_image_descr">Avatar</string>
</resources>