<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginRight="15dp"
    android:gravity="end"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/chat_own_msg_username"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/message_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/chat_own_msg_time"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/message_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#C0A2D3"
            android:maxWidth="400dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/chat_own_msg_message"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="97dp"
            android:layout_height="93dp"
            android:layout_gravity="end"
            android:background="@drawable/placeholder_logo"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:contentDescription="@string/chat_own_msg_image_descr" />

    </LinearLayout>

</LinearLayout>